[gd_scene load_steps=7 format=3 uid="uid://dw30tvbwxl6x5"]

[ext_resource type="Script" path="res://scripts/TargetTextControl.gd" id="1_m5tyi"]
[ext_resource type="Script" path="res://scripts/PracticeManager.gd" id="1_r3dn7"]
[ext_resource type="Texture2D" uid="uid://bnj7oej4tusg2" path="res://assets/white_grid.png" id="2_y60vs"]
[ext_resource type="Theme" uid="uid://mhsdqp7ljmrw" path="res://scripts/autoload/sandy.tres" id="3_xwx3d"]
[ext_resource type="Script" path="res://scripts/ProgressBar.gd" id="5_40twx"]
[ext_resource type="Script" path="res://scripts/fetchArabicPronunciation.gd" id="6_kx75t"]

[node name="Control" type="Control"]
self_modulate = Color(0.00784314, 0.0509804, 0.109804, 1)
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3dn7")

[node name="WhiteGrid" type="Sprite2D" parent="."]
position = Vector2(957, 542)
scale = Vector2(0.99974, 0.999769)
texture = ExtResource("2_y60vs")

[node name="TargetText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -306.0
offset_right = 267.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_xwx3d")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
fit_content = true
text_direction = 2
language = "ar"
script = ExtResource("1_m5tyi")

[node name="ColorRect" type="ColorRect" parent="TargetText"]
show_behind_parent = true
layout_mode = 1
offset_left = -75.0
offset_top = -64.5
offset_right = 576.0
offset_bottom = 206.5

[node name="InputText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -74.5
offset_right = 233.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 60
script = ExtResource("1_m5tyi")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 1645.0
offset_top = 941.0
offset_right = 1846.0
offset_bottom = 997.0
text = "Back"

[node name="TypoCount" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 225.0
offset_right = 84.0
offset_bottom = 265.0

[node name="ProgressBar" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 354.0
offset_top = 126.0
offset_right = 1532.0
offset_bottom = 196.0
color = Color(0.152941, 0.152941, 0.152941, 0)
script = ExtResource("5_40twx")

[node name="SessionNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 1048.0
offset_top = 61.0
offset_right = 1130.0
offset_bottom = 113.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("6_kx75t")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
